--- a/templates/base.html
+++ b/templates/base.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Mi App Flask{% endblock %}</title>
-    <link rel="stylesheet"
-href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+
+    <link rel = "stylesheet" href = "{{ url_for('static', filename='css/pedido.css') }}" />
+    <link rel = "stylesheet" href = "{{ url_for('static', filename='css/login.css') }}" />
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="{{ url_for('home') }}">Entrega Pedidos</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle
-navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -24,17 +30,41 @@ navigation">
                     {% if 'username' in session %}
                         {% if session['role'] == 'admin' %}
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Gestión de Usuarios</a>
+                                <a class="nav-link" href="#">Pedidos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Configuración del Sistema</a>
-                            </li>
-                        {% elif session['role'] == 'editor' %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Crear Contenido</a>
+                                <a class="nav-link" href="#">Clientes</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Editar Contenido</a>
+                                <a class="nav-link" href="/usuarios">Gestión de Usuarios</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="reporteAdminDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Reportes
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="productoDropdown">
+                                    <li><a class="dropdown-item" href="#">Reporte 1</a></li>
+                                    <li><a class="dropdown-item" href="#">Reporte 2</a></li>
+                                    <li><a class="dropdown-item" href="#">Reporte 3</a></li>
+                                </ul>
+                            </li>
+
+                        {% elif session['role'] == 'seller' %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="/ver_mapa">Recorrido</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/preventa">Pre-venta</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="reporteSellerDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Reportes
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="productoDropdown">
+                                    <li><a class="dropdown-item" href="#">Reporte 1</a></li>
+                                    <li><a class="dropdown-item" href="#">Reporte 2</a></li>
+                                    <li><a class="dropdown-item" href="#">Reporte 3</a></li>
+                                </ul>
                             </li>
                         {% elif session['role'] == 'driver' %}
                             <li class="nav-item">
@@ -43,17 +73,27 @@ navigation">
                             <li class="nav-item">
                                 <a class="nav-link" href="/pedido">Entrega Pedidos</a>
                             </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="reporteDriverDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Reportes
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="productoDropdown">
+                                    <li><a class="dropdown-item" href="#">Reporte 1</a></li>
+                                    <li><a class="dropdown-item" href="#">Reporte 2</a></li>
+                                    <li><a class="dropdown-item" href="#">Reporte 3</a></li>
+                                </ul>
+                            </li>
+
                         {% endif %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('dashboard')}}">Dashboard</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('logout') }}">Cerrar sesión({{ session['username'] }})</a>
-                        </li>
-{% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('login') }}">Iniciar
-sesión</a>
+                            <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('logout') }}">Cerrar sesión ({{ session['username'] }})</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('login') }}">Iniciar sesión</a>
                         </li>
                     {% endif %}
                 </ul>
@@ -74,7 +114,6 @@ sesión</a>
         {% endblock %}
     </div>
 
-    <script
-src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
