--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 {% block content %}
     <h1>Bienvenido a la página de inicio</h1>
     {% if 'username' in session %}
-        <p>Has iniciado sesión como {{ session['username'] }} ({{ session['role'] }})</p>
+        <p>Has iniciado sesión como {{ session['username'] }} ({{ session['role'] }}).</p>
     {% else %}
         <p>No has iniciado sesión.</p>
     {% endif %}
